Everything-SDK/include/Everything.h

    EVERYTHINGUSERAPI LPCWSTR EVERYTHINGAPI Everything_GetResultFileNameW(DWORD dwIndex);
    EVERYTHINGUSERAPI LPCSTR EVERYTHINGAPI Everything_GetResultFileNameA(DWORD dwIndex);
    EVERYTHINGUSERAPI LPCWSTR EVERYTHINGAPI Everything_GetResultPathW(DWORD dwIndex);
    EVERYTHINGUSERAPI LPCSTR EVERYTHINGAPI Everything_GetResultPathA(DWORD dwIndex);
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetResultFullPathNameA(DWORD dwIndex, LPSTR buf, DWORD bufsize);
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetResultFullPathNameW(DWORD dwIndex, LPWSTR wbuf, DWORD wbuf_size_in_wchars);
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetResultListSort(void);                                       // Everything 1.4.1
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetResultListRequestFlags(void);                               // Everything 1.4.1
    EVERYTHINGUSERAPI LPCWSTR EVERYTHINGAPI Everything_GetResultExtensionW(DWORD dwIndex);                          // Everything 1.4.1
    EVERYTHINGUSERAPI LPCSTR EVERYTHINGAPI Everything_GetResultExtensionA(DWORD dwIndex);                           // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_GetResultSize(DWORD dwIndex, LARGE_INTEGER *lpSize);            // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_GetResultDateCreated(DWORD dwIndex, FILETIME *lpDateCreated);   // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_GetResultDateModified(DWORD dwIndex, FILETIME *lpDateModified); // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_GetResultDateAccessed(DWORD dwIndex, FILETIME *lpDateAccessed); // Everything 1.4.1
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetResultAttributes(DWORD dwIndex);                            // Everything 1.4.1
    EVERYTHINGUSERAPI LPCWSTR EVERYTHINGAPI Everything_GetResultFileListFileNameW(DWORD dwIndex);                   // Everything 1.4.1
    EVERYTHINGUSERAPI LPCSTR EVERYTHINGAPI Everything_GetResultFileListFileNameA(DWORD dwIndex);                    // Everything 1.4.1
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetResultRunCount(DWORD dwIndex);                              // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_GetResultDateRun(DWORD dwIndex, FILETIME *lpDateRun);
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_GetResultDateRecentlyChanged(DWORD dwIndex, FILETIME *lpDateRecentlyChanged);
    EVERYTHINGUSERAPI LPCWSTR EVERYTHINGAPI Everything_GetResultHighlightedFileNameW(DWORD dwIndex);            // Everything 1.4.1
    EVERYTHINGUSERAPI LPCSTR EVERYTHINGAPI Everything_GetResultHighlightedFileNameA(DWORD dwIndex);             // Everything 1.4.1
    EVERYTHINGUSERAPI LPCWSTR EVERYTHINGAPI Everything_GetResultHighlightedPathW(DWORD dwIndex);                // Everything 1.4.1
    EVERYTHINGUSERAPI LPCSTR EVERYTHINGAPI Everything_GetResultHighlightedPathA(DWORD dwIndex);                 // Everything 1.4.1
    EVERYTHINGUSERAPI LPCWSTR EVERYTHINGAPI Everything_GetResultHighlightedFullPathAndFileNameW(DWORD dwIndex); // Everything 1.4.1
    EVERYTHINGUSERAPI LPCSTR EVERYTHINGAPI Everything_GetResultHighlightedFullPathAndFileNameA(DWORD dwIndex);  // Everything 1.4.1
    // reset state and free any allocated memory
    EVERYTHINGUSERAPI void EVERYTHINGAPI Everything_Reset(void);
    EVERYTHINGUSERAPI void EVERYTHINGAPI Everything_CleanUp(void);
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetMajorVersion(void);
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetMinorVersion(void);
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetRevision(void);
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetBuildNumber(void);
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_Exit(void);
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_IsDBLoaded(void); // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_IsAdmin(void);    // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_IsAppData(void);  // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_RebuildDB(void);              // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_UpdateAllFolderIndexes(void); // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_SaveDB(void);                 // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_SaveRunHistory(void);         // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_DeleteRunHistory(void);       // Everything 1.4.1
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetTargetMachine(void);      // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_IsFastSort(DWORD sortType);
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetRunCountFromFileNameW(LPCWSTR lpFileName);                  // Everything 1.4.1
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_GetRunCountFromFileNameA(LPCSTR lpFileName);                   // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_SetRunCountFromFileNameW(LPCWSTR lpFileName, DWORD dwRunCount); // Everything 1.4.1
    EVERYTHINGUSERAPI BOOL EVERYTHINGAPI Everything_SetRunCountFromFileNameA(LPCSTR lpFileName, DWORD dwRunCount);  // Everything 1.4.1
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_IncRunCountFromFileNameW(LPCWSTR lpFileName);                  // Everything 1.4.1
    EVERYTHINGUSERAPI DWORD EVERYTHINGAPI Everything_IncRunCountFromFileNameA(LPCSTR lpFileName);                   // Everything 1.4.1